--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 						</label>
 						<label>
 						  Message:
-						  <textarea class="autoExpand" rows='3' data-min-rows='3' name="message" autofocus></textarea>
+						  <textarea class="autoExpand" rows='3' data-min-rows='3' name="message"></textarea>
 						</label>
 					  
 						<!-- your other form fields go here -->
