--- a/current-portfolio.html
+++ b/current-portfolio.html
@@ -59,7 +59,7 @@
 			<i class="fas fa-link"></i><span><b>Live</b></span></i>    </a>
 		</li>
 		<li>
-			<a class = "icons" href="#">
+			<a class = "icons" href="https://github.com/SaraahTran/saraahtran.github.io">
 			  <i class="fab fa-github"></i><span><b>Github</b></span></i>    </a>
 		  </li>
 
