--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <div class="content-wrap">
 	<div class="scroll-indicator" id="home" data-scroll-indicator-title="Home"></div>
 	<div class="content content--layout content--layout-1" id="home">
-	<img class="content__img" src="Images/hero-image.png" alt="Some image" />
+	<img class="content__img" src="images/hero-image.png" alt="Some image" />
 	<h3 class="content__title">Sarah Tran</h3>
 	<p class="content__desc">I am a 
     <span class="wrap"><a href="" class="typewrite" data-period="2000" data-type='[ "web designer.", "web developer.", "UX/UI designer.", "digital marketer." ]'>
@@ -73,7 +73,7 @@
 
 	<div class="content-wrap">
 		<div class="content content--layout content--layout-2" id="about">
-			<img class="content__img" src="Images/about-image.svg" alt="Some image" />
+			<img class="content__img" src="images/about-image.svg" alt="Some image" />
 			<h3 class="content__title">About</h3>
 			<p class="content__author"></p>
 			<p class="content__desc">I am from <highlight>Melbourne, Australia</highlight> and I am studying a Bachelors of Commerce and Information Technology at Monash University. I am majoring in <highlight>marketing</highlight> and <highlight>software development.</highlight></p>
