--- a/index.html
+++ b/index.html
@@ -54,9 +54,8 @@
 	<div class="content content--layout content--layout-1" id="home">
 	<img class="content__img" src="images/hero-image.png" alt="Some image" />
 	<h3 class="content__title">Sarah Tran</h3>
-	<p class="content__desc">I am a 
-    <span class="wrap"><a href="" class="typewrite" data-period="2000" data-type='[ "web designer.", "web developer.", "UX/UI designer.", "digital marketer." ]'>
-      <span class="wrap"></span>
+		<p class="content__desc">I am a <highlight>web designer</highlight> & <highlight>web developer.</highlight>
+=
     </a>
 	    </p>
 	<div class="btn">
