--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
 	<div class="content content--layout content--layout-1" id="home">
 	<img class="content__img" src="images/hero-image.png" alt="Some image" />
 	<h3 class="content__title">Sarah Tran</h3>
-		<p class="content__desc">I am a <highlight>web designer</highlight> & <highlight>web developer.</highlight>
-=
-    </a>
+		<p class="content__desc">
 	    </p>
 	<div class="btn">
     <a href="#about"><span>About Me</span></a></div>
