--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         <link rel="stylesheet" href="https://cdn.rawgit.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css">
 </head>
 	
+<!--Loading-->
+
+<div id="loading-wrapper">
+	<div id="loading-text">LOADING</div>
+	<div id="loading-content"></div>
+  </div>
 
 <!-- Navigation -->
 <div class = "navbar">
@@ -54,8 +60,10 @@
 	<div class="content content--layout content--layout-1" id="home">
 	<img class="content__img" src="images/hero-image.png" alt="Some image" />
 	<h3 class="content__title">Sarah Tran</h3>
-		<p class="content__desc">
-	    </p>
+	<p class="content__desc">I am a 
+    <span class="wrap"><a href="" class="typewrite" data-period="2000" data-type='[ "web designer.", "web developer.", "UX/UI designer.", "digital marketer." ]'>
+    <span class="wrap"></span>
+    </a></p>
 	<div class="btn">
     <a href="#about"><span>About Me</span></a></div>
     </div>
@@ -218,12 +226,12 @@
 							<i class="fab fa-facebook-f icon"></i>    </a>
 						</li>
 						<li>
-						  <a href="#"><i class="fab fa-github icon"></i></a>
+						  <a href="https://github.com/SaraahTran"><i class="fab fa-github icon"></i></a>
 						</li>
 						<li>
 						  <a href="#"><i class="fab fa-linkedin-in icon"></i></a></li>
 						<li>
-						  <a href="#"><i class="fab fa-behance icon"></i></a></li>
+						  <a href="https://www.behance.net/sarahtran1"><i class="fab fa-behance icon"></i></a></li>
 					  </ul>
 					
 					  </div>
