--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 	<img class="content__img" src="images/hero-image.png" alt="Some image" />
 	<h3 class="content__title">Sarah Tran</h3>
 	<p class="content__desc">I am a 
-    <span class="wrap"><a href="" class="typewrite" data-period="2000" data-type='[ "web designer.", "web developer.", "UX/UI designer.", "digital marketer." ]'>
-    </span>
-    </a></p>
+        <span class="wrap"><a href="" class="typewrite" data-period="2000" data-type='[ "web designer.", "web developer.", "UX/UI designer.", "digital marketer." ]'>
+			<span class="wrap"></span>
+		  </a></p>
 	<div class="btn">
     <a href="#about"><span>About Me</span></a></div>
     </div>
@@ -93,7 +93,7 @@
 			<img class="content__img" src="images/about-image.svg" alt="Some image" />
 			<h3 class="content__title">About</h3>
 			<p class="content__author"></p>
-			<p class="content__desc">I am from <highlight>Melbourne, Australia</highlight> and I am studying a Bachelors of Commerce and Information Technology at Monash University. I am majoring in <highlight>marketing</highlight> and <highlight>software development.</highlight></p>
+			<p class="content__desc">I am from Melbourne, Australia and I am studying a Bachelors of Commerce and Information Technology at Monash University. I am majoring in marketing and software development.</p>
 			<a href="#" class="content__link"></a>
 		</div>
 	</div></div>
