--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		<link rel="stylesheet" href="https://use.typekit.net/oov2wcw.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&family=Sue+Ellen+Francisco&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdn.rawgit.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css">
+		<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
+		<link href="//db.onlinewebfonts.com/c/4443b611d51ff971972892a2ade08240?family=Gilroy-Thin" rel="stylesheet" type="text/css"/>
 
 	
 <!--Loading-->
