--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 	<div class="content-wrap">
 		<div class="content content--layout content--layout-2" id="about">
-			<img class="content__img" src="images/about-image.svg" alt="Some image" />
+			<img class="content__img" src="images/about-image.png" alt="Some image" />
 			<h3 class="content__title">About</h3>
 			<p class="content__author"></p>
 			<p class="content__desc">I am from Melbourne, Australia and I am studying a Bachelors of Commerce and Information Technology at Monash University. I am majoring in marketing and software development.</p>
