--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
 		<link href="//db.onlinewebfonts.com/c/4443b611d51ff971972892a2ade08240?family=Gilroy-Thin" rel="stylesheet" type="text/css"/>
 
+		<link href="main.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="main.css"></noscript>
 	
 <!--Loading-->
 
@@ -76,7 +78,7 @@
 
 	<div class="content-wrap">
 		<div class="content content--layout content--layout-2" id="about">
-			<img class="content__img" src="images/about-image.png" alt="Some image" />
+			<img class="content__img" src="images/about-image.svg" alt="Some image" />
 			<h3 class="content__title">About</h3>
 			<p class="content__author"></p>
 			<p class="content__desc">I am from Melbourne, Australia and I am studying a Bachelors of Commerce and Information Technology at Monash University. I am majoring in marketing and software development.</p>
@@ -235,11 +237,11 @@
 					</div></div>
 			</section>
 		</main>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/scrollmonitor/1.2.4/scrollMonitor.js"></script>
-		<script type="text/javascript" src="easyScrollDots.min.js"></script>
-		<script src="app.js"></script>
+		<script async src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.min.js"></script>
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+		<script defer src="https://cdnjs.cloudflare.com/ajax/libs/scrollmonitor/1.2.4/scrollMonitor.js"></script>
+		<script defer type="text/javascript" src="easyScrollDots.min.js"></script>
+		<script defer src="app.js"></script>
 
 		<script>
 easyScrollDots({
