--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
 		<link href="//db.onlinewebfonts.com/c/4443b611d51ff971972892a2ade08240?family=Gilroy-Thin" rel="stylesheet" type="text/css"/>
+
 	
 <!--Loading-->
 
@@ -234,11 +235,11 @@
 					</div></div>
 			</section>
 		</main>
-		<script async src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.min.js"></script>
-        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-		<script defer src="https://cdnjs.cloudflare.com/ajax/libs/scrollmonitor/1.2.4/scrollMonitor.js"></script>
-		<script defer type="text/javascript" src="easyScrollDots.min.js"></script>
-		<script defer src="app.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/scrollmonitor/1.2.4/scrollMonitor.js"></script>
+		<script type="text/javascript" src="easyScrollDots.min.js"></script>
+		<script src="app.js"></script>
 
 		<script>
 easyScrollDots({
