--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
+		<link href="//db.onlinewebfonts.com/c/4443b611d51ff971972892a2ade08240?family=Gilroy-Thin" rel="stylesheet" type="text/css"/>
 
 	
 <!--Loading-->
-
+<div id ="preloader" class="loader-wrapper">
+<span class="loader"><span class="loader-inner"></span></span>
+</div>
 
 
 <!-- Navigation -->
@@ -234,12 +237,21 @@
 					</div></div>
 			</section>
 		</main>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<script>
+	setTimeout(function(){
+		$('#preloader').remove();
+	  }, 5000);
+			  </script>
+			  
+	  
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/scrollmonitor/1.2.4/scrollMonitor.js"></script>
 		<script type="text/javascript" src="easyScrollDots.min.js"></script>
 		<script src="app.js"></script>
-
+		<script src="https://formspree.io/js/formbutton-v1.min.js" defer></script>
 		<script>
 easyScrollDots({
   'fixedNav': true,
@@ -249,8 +261,9 @@ easyScrollDots({
 });
 		</script>
 
-<script src="https://formspree.io/js/formbutton-v1.min.js" defer></script>
 
+
+  
 
 </div>
   </body>
