--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 		<link rel="shortcut icon" href="images/logo.svg">
 		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="https://use.typekit.net/oov2wcw.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
 		<link href="//db.onlinewebfonts.com/c/4443b611d51ff971972892a2ade08240?family=Gilroy-Thin" rel="stylesheet" type="text/css"/>
 
+	
 <!--Loading-->
 <div id ="preloader" class="loader-wrapper">
 <span class="loader"><span class="loader-inner"></span></span>
@@ -235,7 +237,7 @@
 					</div></div>
 			</section>
 		</main>
-	
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 <script>
 	setTimeout(function(){
